{
    "name": "DefaultMap",
    "maps": [
        {
            "name": "Default",
            "id": "778b3052-d1b6-465f-8ff7-2cf6a6f06c6b",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "b12628c2-8f2b-42f3-a8e5-b8e1d59e3e51",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "28319c55-a535-483d-9612-9f50ef6e2504",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "ce8845de-3028-4af0-a6ac-a23abcb5c609",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "a82254d3-e833-44fd-9436-c83b2cc3b558",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotatePressed",
                    "type": "Value",
                    "id": "1521f40a-eff7-4711-a3b6-fb6f0fb5662d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6b090c83-c9d0-4fbd-b5a3-9e6ecd33072a",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b282f814-a25f-47ec-bec7-393c0482db47",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1af4587-2d66-4261-b571-7337e787b5a9",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23785419-cb00-4d29-a5d6-4f82a82dced7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3828911-3b95-48ae-92f6-2c956cfa5cdd",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotatePressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc195fd6-47b2-411c-a76a-efe4e1002783",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "RotatePressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}